--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,13 +2,11 @@ before:
   hooks:
     - go mod tidy
 builds:
-  - 
-    id: commenter
+  - id: commenter
     main: ./cmd/commenter
     binary: commenter
     env:
       - CGO_ENABLED=0
-      - GOFLAGS=-mod=vendor
     goos:
       - linux
     goarch:
@@ -18,9 +16,8 @@ snapshot:
   name_template: "{{ .Tag }}-next"
 
 archives:
-  -
-    format: binary
-    name_template: "{{ .Binary}}-{{ .Os }}-{{ .Arch }}"
+  - format: binary
+    name_template: "{{ .Binary }}-{{ .Os }}-{{ .Arch }}"
 
 release:
   prerelease: auto
